--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       border: 3px solid #333;
       background: #2a4a2a;
       box-shadow: 0 0 20px rgba(0, 255, 0, 0.3);
+      display: block;
+      margin: 0 auto;
     }
 
     .controls {
@@ -91,35 +93,230 @@
       color: #666;
       margin: 0 10px;
     }
+
+    /* Lobby Screen Styles */
+    .screen {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .lobby-container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    .lobby-container h2 {
+      text-align: center;
+      margin-bottom: 30px;
+      font-size: 32px;
+      color: #44ff44;
+    }
+
+    .teams-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 40px 0;
+    }
+
+    .team-section {
+      flex: 1;
+      text-align: center;
+    }
+
+    .team-section h3 {
+      font-size: 24px;
+      margin-bottom: 20px;
+    }
+
+    .red-team h3 {
+      color: #ff4444;
+    }
+
+    .blue-team h3 {
+      color: #4444ff;
+    }
+
+    .team-players {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .player-slot {
+      padding: 15px 20px;
+      border: 2px solid #444;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      background: #2a2a2a;
+    }
+
+    .player-slot.empty {
+      border-style: dashed;
+    }
+
+    .player-slot.filled {
+      border-style: solid;
+    }
+
+    .red-team .player-slot.filled {
+      border-color: #ff4444;
+      background: rgba(255, 68, 68, 0.2);
+    }
+
+    .blue-team .player-slot.filled {
+      border-color: #4444ff;
+      background: rgba(68, 68, 255, 0.2);
+    }
+
+    .player-slot:hover {
+      border-color: #666;
+      background: #333;
+    }
+
+    .slot-text {
+      font-size: 16px;
+      color: #ccc;
+    }
+
+    .vs-section {
+      flex: 0 0 100px;
+      text-align: center;
+    }
+
+    .vs-text {
+      font-size: 36px;
+      font-weight: bold;
+      color: #666;
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    }
+
+    .lobby-controls {
+      text-align: center;
+      margin-top: 40px;
+    }
+
+    .start-btn {
+      padding: 15px 40px;
+      font-size: 20px;
+      font-weight: bold;
+      background: #44ff44;
+      color: #000;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .start-btn:hover:not(:disabled) {
+      background: #55ff55;
+      transform: translateY(-2px);
+    }
+
+    .start-btn:disabled {
+      background: #666;
+      color: #aaa;
+      cursor: not-allowed;
+    }
+
+    .back-btn {
+      padding: 8px 16px;
+      font-size: 14px;
+      background: #666;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-top: 10px;
+    }
+
+    .back-btn:hover {
+      background: #777;
+    }
+
+    .lobby-info {
+      margin-top: 15px;
+      color: #aaa;
+      font-size: 16px;
+    }
   </style>
 </head>
 
 <body>
-  <h1>Boost Arena - Prototype</h1>
+  <h1>Boost Arena</h1>
 
-  <div class="score-display">
-    <div class="score-item">
-      <span class="score-label">You</span>
-      <span class="score-value" id="playerScore">0</span>
-    </div>
-    <div class="score-separator">-</div>
-    <div class="score-item">
-      <span class="score-value" id="opponentScore">0</span>
-      <span class="score-label">AI</span>
+  <!-- Lobby Screen -->
+  <div id="lobbyScreen" class="screen">
+    <div class="lobby-container">
+      <h2>Team Selection</h2>
+
+      <div class="teams-container">
+        <div class="team-section red-team">
+          <h3>🔴 Red Team</h3>
+          <div class="team-players" id="redTeamPlayers">
+            <div class="player-slot empty" data-team="red" data-slot="0">
+              <span class="slot-text">Click to Join</span>
+            </div>
+            <div class="player-slot empty" data-team="red" data-slot="1">
+              <span class="slot-text">Click to Join</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="vs-section">
+          <div class="vs-text">VS</div>
+        </div>
+
+        <div class="team-section blue-team">
+          <h3>🔵 Blue Team</h3>
+          <div class="team-players" id="blueTeamPlayers">
+            <div class="player-slot empty" data-team="blue" data-slot="0">
+              <span class="slot-text">Click to Join</span>
+            </div>
+            <div class="player-slot empty" data-team="blue" data-slot="1">
+              <span class="slot-text">Click to Join</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="lobby-controls">
+        <button id="startGameBtn" class="start-btn" disabled>Start Game</button>
+        <p class="lobby-info">Select teams to begin playing!</p>
+      </div>
     </div>
   </div>
 
-  <canvas id="gameCanvas" width="700" height="400"></canvas>
+  <!-- Game Screen -->
+  <div id="gameScreen" class="screen" style="display: none;">
+    <div class="score-display">
+      <div class="score-item">
+        <span class="score-label" id="leftTeamLabel">Red</span>
+        <span class="score-value" id="leftTeamScore">0</span>
+      </div>
+      <div class="score-separator">-</div>
+      <div class="score-item">
+        <span class="score-value" id="rightTeamScore">0</span>
+        <span class="score-label" id="rightTeamLabel">Blue</span>
+      </div>
+    </div>
 
-  <div class="boost-bar">
-    <div class="boost-fill" id="boostFill"></div>
-    <div class="boost-text" id="boostText">100%</div>
-  </div>
+    <canvas id="gameCanvas" width="700" height="400"></canvas>
 
-  <div class="controls">
-    <p><strong>Controls:</strong></p>
-    <p>WASD - Move | SHIFT - Boost | SPACE - Hit Ball</p>
-    <p>Manage your boost wisely!</p>
+    <div class="boost-bar">
+      <div class="boost-fill" id="boostFill"></div>
+      <div class="boost-text" id="boostText">100%</div>
+    </div>
+
+    <div class="controls">
+      <p><strong>Controls:</strong></p>
+      <p>WASD - Move | SHIFT - Boost | SPACE - Hit Ball</p>
+      <button id="backToLobbyBtn" class="back-btn">Back to Lobby</button>
+    </div>
   </div>
 
   <script src="game.js"></script>
