increase lobby size to 8

--- a/index.html
+++ b/index.html
@@ -621,6 +621,12 @@
             <div class="player-slot empty" data-team="red" data-slot="1">
               <span class="slot-text">Click to Join</span>
             </div>
+            <div class="player-slot empty" data-team="red" data-slot="2">
+              <span class="slot-text">Click to Join</span>
+            </div>
+            <div class="player-slot empty" data-team="red" data-slot="3">
+              <span class="slot-text">Click to Join</span>
+            </div>
           </div>
         </div>
 
@@ -635,6 +641,12 @@
               <span class="slot-text">Click to Join</span>
             </div>
             <div class="player-slot empty" data-team="blue" data-slot="1">
+              <span class="slot-text">Click to Join</span>
+            </div>
+            <div class="player-slot empty" data-team="blue" data-slot="2">
+              <span class="slot-text">Click to Join</span>
+            </div>
+            <div class="player-slot empty" data-team="blue" data-slot="3">
               <span class="slot-text">Click to Join</span>
             </div>
           </div>
