--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     .main-menu-layout {
       display: flex;
       gap: 30px;
-      max-width: 1200px;
+      max-width: 1400px;
       margin: 0 auto;
       padding: 20px;
     }
@@ -826,6 +826,144 @@
       background: #777;
       transform: translateY(-2px);
     }
+
+    /* Leaderboard Styles */
+    .leaderboard-section {
+      flex: 1;
+      max-width: 350px;
+      padding: 20px;
+      border: 2px solid #444;
+      border-radius: 8px;
+      background: #2a2a2a;
+      height: fit-content;
+    }
+
+    .leaderboard-section h3 {
+      color: #44ff44;
+      margin-bottom: 20px;
+      font-size: 20px;
+      text-align: center;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+    }
+
+    .leaderboard-list {
+      max-height: 400px;
+      overflow-y: auto;
+    }
+
+    .leaderboard-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 12px 15px;
+      margin-bottom: 8px;
+      background: #333;
+      border: 2px solid #555;
+      border-radius: 6px;
+      transition: all 0.3s ease;
+    }
+
+    .leaderboard-item:hover {
+      border-color: #44ff44;
+      background: #3a3a3a;
+    }
+
+    .leaderboard-item.top-3 {
+      background: linear-gradient(45deg, #444, #555);
+      border-color: #ffaa44;
+    }
+
+    .leaderboard-item.rank-1 {
+      border-color: #ffd700;
+      background: linear-gradient(45deg, #4a4a00, #666600);
+    }
+
+    .leaderboard-item.rank-2 {
+      border-color: #c0c0c0;
+      background: linear-gradient(45deg, #404040, #606060);
+    }
+
+    .leaderboard-item.rank-3 {
+      border-color: #cd7f32;
+      background: linear-gradient(45deg, #4a3020, #6a4030);
+    }
+
+    .player-info {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .player-rank {
+      font-size: 16px;
+      font-weight: bold;
+      color: #ffaa44;
+      min-width: 25px;
+    }
+
+    .rank-1 .player-rank {
+      color: #ffd700;
+    }
+
+    .rank-2 .player-rank {
+      color: #c0c0c0;
+    }
+
+    .rank-3 .player-rank {
+      color: #cd7f32;
+    }
+
+    .player-username {
+      font-size: 16px;
+      font-weight: bold;
+      color: white;
+    }
+
+    .player-stats {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      gap: 2px;
+    }
+
+    .stat-wins {
+      font-size: 14px;
+      color: #44ff44;
+      font-weight: bold;
+    }
+
+    .stat-goals {
+      font-size: 12px;
+      color: #ffaa44;
+    }
+
+    .no-leaderboard {
+      text-align: center;
+      color: #666;
+      font-style: italic;
+      padding: 40px 20px;
+    }
+
+    .leaderboard-refresh {
+      width: 100%;
+      padding: 10px;
+      font-size: 14px;
+      background: #444;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      margin-top: 15px;
+      transition: all 0.3s ease;
+    }
+
+    .leaderboard-refresh:hover {
+      background: #555;
+      transform: translateY(-1px);
+    }
   </style>
 </head>
 
@@ -891,6 +1029,14 @@
           <div class="no-lobbies">No active lobbies</div>
         </div>
         <button id="refreshLobbiesBtn" class="refresh-btn">🔄 Refresh</button>
+      </div>
+
+      <div class="leaderboard-section">
+        <h3>🏆 Leaderboard</h3>
+        <div class="leaderboard-list" id="leaderboardList">
+          <div class="no-leaderboard">Loading...</div>
+        </div>
+        <button id="refreshLeaderboardBtn" class="leaderboard-refresh">🔄 Refresh</button>
       </div>
     </div>
   </div>
