--- a/index.html
+++ b/index.html
@@ -1171,7 +1171,7 @@
 </head>
 
 <body>
-  <h1>Blitz Ball</h1>
+  <h1>🚀 Blitz Ball</h1>
 
   <!-- User Info (shown when logged in) -->
   <div id="userInfo" class="user-info" style="display: none;">
@@ -1184,7 +1184,19 @@
     <div
       style="display: flex; gap: 30px; max-width: 1200px; margin: 0 auto; align-items: stretch; justify-content: center;">
       <div class="auth-screen" style="flex: 1; max-width: 400px;">
-        <h2 id="authTitle">Welcome to Blitz Ball</h2>
+        <div class="login-benefits"
+          style="margin-bottom: 25px; padding: 20px; background: linear-gradient(145deg, rgba(0, 255, 255, 0.1), rgba(255, 0, 255, 0.05)); border: 1px solid rgba(0, 255, 255, 0.3); border-radius: 8px;">
+          <p style="color: #00ffff; font-weight: 700; margin: 0 0 15px 0; text-align: center; font-size: 16px;">🚀
+            CREATE AN ACCOUNT TO:</p>
+          <ul style="color: #aaffff; font-size: 14px; margin: 0; padding-left: 20px; line-height: 1.6;">
+            <li>Create your own game rooms</li>
+            <li>Track wins and goals on the leaderboard</li>
+            <li>Secure your username</li>
+            <li>Persistent game statistics</li>
+          </ul>
+          <p style="color: #ffaa44; font-size: 13px; margin: 15px 0 0 0; text-align: center; font-style: italic;">🎮 You
+            can still join existing games as a guest!</p>
+        </div>
 
         <div id="authMessage"></div>
 
@@ -1226,7 +1238,6 @@
   <div id="mainMenuScreen" class="screen" style="display: none;">
     <div class="main-menu-layout">
       <div class="menu-container">
-        <h2 style="margin-top: 0;">🚀 Blitz Ball</h2>
 
         <div class="player-name-section">
           <label for="playerNameInput">Your Name:</label>
@@ -1240,18 +1251,6 @@
             <button id="createRoomBtn" class="menu-btn primary">Create</button>
           </div>
           <p class="menu-info">Create a private room for friends</p>
-        </div>
-
-        <div class="menu-section" id="loginPromptSection">
-          <h3>📊 Unlock More Features!</h3>
-          <p class="menu-info"><strong>Log in to get:</strong></p>
-          <ul style="color: #aaa; font-size: 14px; margin: 10px 0; padding-left: 20px;">
-            <li>Create your own game rooms</li>
-            <li>Track wins and goals on the leaderboard</li>
-            <li>Secure your username</li>
-            <li>Persistent game statistics</li>
-          </ul>
-          <p class="menu-info">🎮 You can still join existing games as a guest!</p>
         </div>
       </div>
 
