--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@
       <div class="menu-container">
 
         <div class="player-name-section">
-          <label for="playerNameInput">Your Name:</label>
+          <label for="playerNameInput">Your username:</label>
           <input type="text" id="playerNameInput" placeholder="Enter your name" maxlength="15" value="Player">
         </div>
 
@@ -1250,7 +1250,6 @@
             <input type="text" id="roomNameInput" placeholder="Enter room name" maxlength="20">
             <button id="createRoomBtn" class="menu-btn primary">Create</button>
           </div>
-          <p class="menu-info">Create a private room for friends</p>
         </div>
       </div>
 
@@ -1362,7 +1361,7 @@
     <div class="controls">
       <p><strong>Controls:</strong></p>
       <p>WASD - Move | SHIFT - Boost | SPACE - Hit Ball</p>
-      <button id="backToLobbyBtn" class="back-btn">Back to Lobby</button>
+      <button id="backToLobbyBtn" class="back-btn">👑 Return All to Lobby</button>
     </div>
   </div>
 
