--- a/index.html
+++ b/index.html
@@ -149,41 +149,75 @@
       font-size: 24px;
       font-weight: bold;
       background: linear-gradient(45deg, rgba(0, 255, 255, 0.1), rgba(255, 0, 128, 0.1));
-      padding: 20px;
-      border-radius: 15px;
-      border: 2px solid #00ffff;
-      box-shadow: 0 0 30px rgba(0, 255, 255, 0.3);
+      padding: 25px;
+      border-radius: 20px;
+      border: 3px solid #00ffff;
+      box-shadow: 0 0 40px rgba(0, 255, 255, 0.4);
+      backdrop-filter: blur(10px);
     }
 
     .score-item {
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 0 20px;
+      margin: 0 25px;
+      padding: 15px;
+      border-radius: 15px;
+      background: linear-gradient(145deg, rgba(0, 20, 40, 0.3), rgba(0, 10, 20, 0.5));
+      border: 2px solid rgba(255, 255, 255, 0.1);
+      min-width: 120px;
     }
 
     .score-value {
-      font-size: 48px;
-      color: #00ffff;
-      text-shadow:
-        0 0 20px rgba(0, 255, 255, 0.8),
-        0 0 40px rgba(0, 255, 255, 0.4);
+      font-size: 56px;
       font-weight: 900;
+      margin-bottom: 8px;
+      text-shadow: 0 0 25px currentColor;
     }
 
     .score-label {
-      font-size: 16px;
-      color: #aaffff;
-      margin-top: 5px;
+      font-size: 18px;
+      margin: 0;
       text-transform: uppercase;
       letter-spacing: 2px;
+      font-weight: 700;
+    }
+
+    /* Team-specific score colors */
+    .score-item:first-child .score-value {
+      color: #ff6666;
+      text-shadow: 0 0 25px rgba(255, 102, 102, 0.8);
+    }
+
+    .score-item:first-child .score-label {
+      color: #ff6666;
+    }
+
+    .score-item:first-child {
+      border-color: rgba(255, 102, 102, 0.3);
+      box-shadow: 0 0 15px rgba(255, 102, 102, 0.2);
+    }
+
+    .score-item:last-child .score-value {
+      color: #6699ff;
+      text-shadow: 0 0 25px rgba(102, 153, 255, 0.8);
+    }
+
+    .score-item:last-child .score-label {
+      color: #6699ff;
+    }
+
+    .score-item:last-child {
+      border-color: rgba(102, 153, 255, 0.3);
+      box-shadow: 0 0 15px rgba(102, 153, 255, 0.2);
     }
 
     .score-separator {
-      font-size: 40px;
-      color: #ff00ff;
-      margin: 0 15px;
-      text-shadow: 0 0 15px rgba(255, 0, 255, 0.6);
+      font-size: 48px;
+      color: #00ffff;
+      margin: 0 20px;
+      text-shadow: 0 0 20px rgba(0, 255, 255, 0.8);
+      font-weight: 900;
     }
 
     /* Lobby Screen Styles */
@@ -1022,6 +1056,71 @@
       box-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
     }
 
+    /* Auth Message Styles */
+    .error-message {
+      background: linear-gradient(45deg, rgba(255, 68, 68, 0.2), rgba(255, 0, 0, 0.3));
+      border: 2px solid #ff4444;
+      border-radius: 8px;
+      padding: 15px;
+      margin: 10px 0;
+      color: #ff8888;
+      text-align: center;
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      box-shadow: 0 0 20px rgba(255, 68, 68, 0.3);
+      animation: messageSlide 0.3s ease-out;
+    }
+
+    .success-message {
+      background: linear-gradient(45deg, rgba(0, 255, 136, 0.2), rgba(68, 255, 68, 0.3));
+      border: 2px solid #00ff88;
+      border-radius: 8px;
+      padding: 15px;
+      margin: 10px 0;
+      color: #44ff88;
+      text-align: center;
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      box-shadow: 0 0 20px rgba(0, 255, 136, 0.3);
+      animation: messageSlide 0.3s ease-out;
+    }
+
+    @keyframes messageSlide {
+      from {
+        opacity: 0;
+        transform: translateY(-10px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Registration mode indicator */
+    .auth-screen.register-mode {
+      position: relative;
+    }
+
+    .auth-screen.register-mode::before {
+      content: "REGISTRATION MODE";
+      position: absolute;
+      top: -15px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: linear-gradient(45deg, #00ff88, #44ff44);
+      color: #000;
+      padding: 5px 15px;
+      border-radius: 15px;
+      font-size: 12px;
+      font-weight: 900;
+      letter-spacing: 1px;
+      box-shadow: 0 0 15px rgba(0, 255, 136, 0.5);
+      z-index: 10;
+    }
+
     /* User Info & Logout Button Styles */
     .user-info {
       position: fixed;
@@ -1135,6 +1234,184 @@
       background: linear-gradient(145deg, rgba(205, 127, 50, 0.15), rgba(165, 100, 30, 0.25));
     }
 
+    /* Winning Screen Styles */
+    .winning-screen {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 40px;
+      text-align: center;
+    }
+
+    .winner-announcement {
+      margin-bottom: 50px;
+      padding: 30px;
+      background: linear-gradient(145deg, rgba(0, 50, 100, 0.3), rgba(0, 20, 40, 0.5));
+      border: 3px solid #00ffff;
+      border-radius: 25px;
+      box-shadow: 0 0 50px rgba(0, 255, 255, 0.4);
+    }
+
+    .winner-title {
+      font-size: 48px;
+      font-weight: 900;
+      margin: 0 0 20px 0;
+      text-transform: uppercase;
+      letter-spacing: 3px;
+      text-shadow: 0 0 30px currentColor;
+      animation: winnerGlow 2s infinite alternate;
+    }
+
+    .winner-title.red {
+      color: #ff6666;
+      text-shadow: 0 0 30px rgba(255, 102, 102, 0.8);
+    }
+
+    .winner-title.blue {
+      color: #6699ff;
+      text-shadow: 0 0 30px rgba(102, 153, 255, 0.8);
+    }
+
+    @keyframes winnerGlow {
+      from {
+        text-shadow: 0 0 30px currentColor;
+      }
+
+      to {
+        text-shadow: 0 0 50px currentColor, 0 0 80px currentColor;
+      }
+    }
+
+    .final-score {
+      font-size: 32px;
+      font-weight: 700;
+      color: #00ffff;
+      text-shadow: 0 0 20px rgba(0, 255, 255, 0.8);
+      letter-spacing: 2px;
+      margin: 0;
+    }
+
+    .scoreboard {
+      display: flex;
+      justify-content: space-between;
+      gap: 40px;
+      margin-bottom: 50px;
+    }
+
+    .team-stats {
+      flex: 1;
+      padding: 30px;
+      border-radius: 20px;
+      background: linear-gradient(145deg, rgba(0, 20, 40, 0.4), rgba(0, 10, 20, 0.6));
+      border: 3px solid;
+      backdrop-filter: blur(10px);
+    }
+
+    .team-stats.red {
+      border-color: #ff6666;
+      box-shadow: 0 0 30px rgba(255, 102, 102, 0.3);
+    }
+
+    .team-stats.blue {
+      border-color: #6699ff;
+      box-shadow: 0 0 30px rgba(102, 153, 255, 0.3);
+    }
+
+    .team-stats h3 {
+      font-size: 28px;
+      font-weight: 900;
+      margin: 0 0 25px 0;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
+
+    .team-stats.red h3 {
+      color: #ff6666;
+      text-shadow: 0 0 20px rgba(255, 102, 102, 0.8);
+    }
+
+    .team-stats.blue h3 {
+      color: #6699ff;
+      text-shadow: 0 0 20px rgba(102, 153, 255, 0.8);
+    }
+
+    .player-stat {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 20px;
+      margin-bottom: 12px;
+      background: linear-gradient(145deg, rgba(0, 30, 60, 0.4), rgba(0, 15, 30, 0.6));
+      border: 2px solid rgba(255, 255, 255, 0.1);
+      border-radius: 12px;
+      transition: all 0.3s ease;
+    }
+
+    .player-stat:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 5px 20px rgba(0, 255, 255, 0.2);
+    }
+
+    .player-name {
+      font-size: 18px;
+      font-weight: 700;
+      color: #ffffff;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+    }
+
+    .player-goals {
+      font-size: 20px;
+      font-weight: 900;
+      color: #00ffff;
+      text-shadow: 0 0 15px rgba(0, 255, 255, 0.6);
+    }
+
+    .game-controls {
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      margin-top: 40px;
+    }
+
+    .control-btn {
+      padding: 18px 40px;
+      font-size: 20px;
+      font-weight: 900;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      min-width: 200px;
+    }
+
+    .control-btn.primary {
+      background: linear-gradient(45deg, #00ffff, #ff00ff);
+      color: #000;
+      box-shadow: 0 0 30px rgba(0, 255, 255, 0.5);
+    }
+
+    .control-btn.primary:hover {
+      background: linear-gradient(45deg, #ff00ff, #00ffff);
+      transform: translateY(-3px);
+      box-shadow: 0 8px 40px rgba(255, 0, 255, 0.6);
+    }
+
+    .control-btn.secondary {
+      background: linear-gradient(45deg, #333, #555);
+      color: #00ffff;
+      border: 2px solid #00ffff;
+      box-shadow: 0 0 20px rgba(0, 255, 255, 0.3);
+    }
+
+    .control-btn.secondary:hover {
+      background: linear-gradient(45deg, #00ffff, #0088ff);
+      color: #000;
+      transform: translateY(-3px);
+      box-shadow: 0 8px 30px rgba(0, 255, 255, 0.6);
+    }
+
     /* Responsive Design */
     @media (max-width: 1200px) {
       .main-menu-layout {
@@ -1166,6 +1443,46 @@
         width: 90%;
         max-width: 300px;
       }
+
+      /* Winning screen mobile adjustments */
+      .winning-screen {
+        padding: 20px;
+      }
+
+      .winner-title {
+        font-size: 36px;
+      }
+
+      .final-score {
+        font-size: 24px;
+      }
+
+      .scoreboard {
+        flex-direction: column;
+        gap: 20px;
+      }
+
+      .game-controls {
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+      }
+
+      .control-btn {
+        width: 100%;
+        max-width: 300px;
+      }
+
+      .score-display {
+        flex-direction: column;
+        gap: 15px;
+        padding: 20px;
+      }
+
+      .score-separator {
+        transform: rotate(90deg);
+        margin: 10px 0;
+      }
     }
   </style>
 </head>
@@ -1184,6 +1501,8 @@
     <div
       style="display: flex; gap: 30px; max-width: 1200px; margin: 0 auto; align-items: stretch; justify-content: center;">
       <div class="auth-screen" style="flex: 1; max-width: 400px;">
+        <h2 id="authTitle">Welcome Back</h2>
+
         <div class="login-benefits"
           style="margin-bottom: 25px; padding: 20px; background: linear-gradient(145deg, rgba(0, 255, 255, 0.1), rgba(255, 0, 255, 0.05)); border: 1px solid rgba(0, 255, 255, 0.3); border-radius: 8px;">
           <p style="color: #00ffff; font-weight: 700; margin: 0 0 15px 0; text-align: center; font-size: 16px;">🚀
@@ -1198,7 +1517,7 @@
             can still join existing games as a guest!</p>
         </div>
 
-        <div id="authMessage"></div>
+        <div id="authMessage" style="min-height: 20px;"></div>
 
         <form id="authForm" class="auth-form">
           <div class="form-group">
